--- a/configuration/partials/account/task-sign-up.hbs
+++ b/configuration/partials/account/task-sign-up.hbs
@@ -15,8 +15,8 @@
           config: {
             email: { __template: '\{{jquery "#sign-up-email" "val"}}' },
             emailConfirm: { __template: '\{{jquery "#sign-up-email-confirm" "val"}}' },
-            password: { __template: '\{{jquery "#sign-up-password" "val"}}' },
-            passwordConfirm: { __template: '\{{jquery "#sign-up-password-confirm" "val"}}' }
+            password: { __template: '\{{{jquery "#sign-up-password" "val"}}}' },
+            passwordConfirm: { __template: '\{{{jquery "#sign-up-password-confirm" "val"}}}' }
           }
         },
         {
