--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -326,7 +326,7 @@
           name: "reAuthenticate",
           type: "firebaseReAuthenticate",
           config: {
-            password: { __template: '\{{jquery "#re-authenticate-password" "val"}}' },
+            password: { __template: '\{{{jquery "#re-authenticate-password" "val"}}}' },
             providerId: { __template: '\{{jquery rootElement "data" (split "provider-id")}}' }
           }
         },
@@ -409,8 +409,8 @@
           name: "changePassword",
           type: "firebaseChangePassword",
           config: {
-            password: { __template: "\{{jquery '#change-password-value' 'val'}}" },
-            passwordConfirm: { __template: "\{{jquery '#change-password-confirm' 'val'}}" }
+            password: { __template: "\{{{jquery '#change-password-value' 'val'}}}" },
+            passwordConfirm: { __template: "\{{{jquery '#change-password-confirm' 'val'}}}" }
           }
         },
         {
