--- a/configuration/templates/volunteering/task-body-submit.hbs
+++ b/configuration/templates/volunteering/task-body-submit.hbs
@@ -2,6 +2,7 @@
   {{#json}}
     {{#json key='task'}}
       {{{json key='organisation_name' value=organisation_name}}},
+      {{{json key='internal_reference' value=internal_reference}}},
       {{{json key='location' value=location}}},
       {{{json key='organisation_charity_number' value=organisation_charity_number }}},
       {{{json key='un_sustainable_development_goals' value=(default (join un_sustainable_development_goals ';') un_sustainable_development_goals)}}},
