--- a/configuration/templates/volunteering/get-award-info.hbs
+++ b/configuration/templates/volunteering/get-award-info.hbs
@@ -1,5 +1,9 @@
+{{#unless (length @root.data.accountInfo.awards_list ">" 0)}}
+{}
+{{else}}
 {{#each @root.data.accountInfo.awards_list}}
   {{#compare (lowercase award_level) (lowercase (default @root.request.params.query.award (stringify @root.data.accountInfo.maximum_award_level)))}}
     {{{stringify this}}}
   {{/compare}}
 {{/each}}
+{{/unless}}
